syntax = "proto3";

package juno.file_service.config;

import "identifiers.proto";
import "project.proto";
import "file_bucket.proto";
import "file.proto";

service FileServiceConfigDbService {
  rpc getConfig(GetFileServiceConfigRequest) returns (FileServiceConfig);
  rpc createConfig(CreateFileServiceConfigRequest) returns (FileServiceConfig);
  rpc deleteConfig(DeleteFileServiceConfigRequest) returns (FileServiceConfig);
  rpc updateConfig(UpdateFileServiceConfigRequest) returns (FileServiceConfig);
}

service FileServiceConfigService {
  rpc setup(SetupRequest) returns (SetupResponse);
}

message SetupRequest {
  int64 projectId = 1;
  string environment = 2;
}

message SetupResponse {
  bool success = 1;
  FileServiceConfig config = 2;
}

message FileServiceConfig {
  int64 id = 1;
  repeated bucket.Bucket buckets = 2;
  string environment = 3;
  repeated file.File files = 4;
}

message GetFileServiceConfigRequest {
  int64 id = 1;
  string environment = 2;
}

message CreateFileServiceConfigRequest {
  int64 project_id = 1;
  repeated bucket.Bucket buckets = 2;
  repeated file.File files = 3;
  string environment = 4;
}

message UpdateFileServiceConfigRequest {
  int64 id = 1;
  repeated bucket.Bucket buckets = 2;
  repeated file.File files = 3;
  string environment = 4;
}

message DeleteFileServiceConfigRequest {
  int64 id = 1;
  string environment = 2;
}
